--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <li><strong>10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong></li>
       <li><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
       <li><strong>07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong></li>
-      <li><strong>05/2024, invited to be a TPC member of IEEE MSN 2024.</strong></li>
+      <li class="more-news" style="display:none;"><strong>05/2024, invited to be a TPC member of IEEE MSN 2024.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2023, joined Duke University as a Postdoctoral Associate.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2023, successfully defended my Ph.D. thesis.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2022, passed comprehensive exam.</strong></li>
