--- a/index.html
+++ b/index.html
@@ -122,11 +122,14 @@
   <div class="w3-container w3-light-grey w3-padding-32" id="news">
    <h2>News</h2>
    <ul id="news-list">
-      <li><strong>05/2025, awarded OE Creation grant, thanks UM-Dearborn and OE committee!</strong></li>
+      <li><strong>05/2025, awarded OE Creation grant, thanks OE committee.</strong></li>
+      <li><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
+      <li><strong>04/2025, invited to serve as NSF panelist.</strong></li>
+      <li><strong>03/2025, awarded Creative Teaching fund, thanks UM-Dearborn.</strong></li>
       <li><strong>01/2025, invited to be a TPC member of IEEE INFOCOM DeepWireless 2025.</strong></li>
       <li><strong>10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong></li>
       <li><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
-      <li><strong>07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong></li>
+      <li class="more-news" style="display:none;"><strong>07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2024, invited to be a TPC member of IEEE MSN 2024.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2023, joined Duke University as a Postdoctoral Associate.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2023, successfully defended my Ph.D. thesis.</strong></li>
@@ -570,7 +573,11 @@ The Projects Section
   <div class="w3-container w3-light-grey w3-padding-32" id="award">
     <h2>Awards</h2>
     <p><li> 2025, OE Creation Grant, UM-Dearborn</p>
+    <p><li> 2025, Creative Teaching Fund, UM-Dearborn</p>
+    <p><li> 2025, SURE Program, UM-Dearborn</p>
     <p><li> 2025, NeTS ECI Travel Grant, NSF</p>
+    <p><li> 2024, Regional I-Corp, NSF</p>
+    <p><li> 2024, RAG Grant, UM-Dearborn</p>
     <p><li> 2023/2021/2019, Graduate Office Fellowship, MSU</p>
     <p><li> 2023, Dissertation Completion Fellowship, MSU</p>
     <p><li> 2022, Graduate Travel Fellowship, MSU</p>
