--- a/index.html
+++ b/index.html
@@ -518,12 +518,12 @@ The Projects Section
             <li><strong>master</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Ashwin Sarvadey
-            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Jaskirat Sudan 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Rohit Raval 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Nishaant Madhankumar -->
+            Nishaant Madhankumar
             </p>
 
           <p>
