--- a/index.html
+++ b/index.html
@@ -576,7 +576,7 @@ The Projects Section
     <p><li> 2025, Creative Teaching Fund, UM-Dearborn</p>
     <p><li> 2025, SURE Program, UM-Dearborn</p>
     <p><li> 2025, NeTS ECI Travel Grant, NSF</p>
-    <p><li> 2024, Regional I-Corp Fund, NSF</p>
+    <p><li> 2024, Regional I-Corps Fund, NSF</p>
     <p><li> 2024, RAG Grant, UM-Dearborn</p>
     <p><li> 2023/2021/2019, Graduate Office Fellowship, MSU</p>
     <p><li> 2023, Dissertation Completion Fellowship, MSU</p>
