--- a/index.html
+++ b/index.html
@@ -126,11 +126,11 @@
       <li><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
       <li><strong>04/2025, invited to serve as NSF panelist.</strong></li>
       <li><strong>03/2025, awarded Creative Teaching fund, thanks UM-Dearborn.</strong></li>
-      <li><strong>01/2025, invited to be a TPC member of IEEE INFOCOM DeepWireless 2025.</strong></li>
-      <li><strong>10/2024, invited to be a TPC member of IEEE ICNC 2025.</strong></li>
+      <li><strong>01/2025, invited to serve as TPC of IEEE INFOCOM DeepWireless 2025.</strong></li>
+      <li><strong>10/2024, invited to serve as TPC of IEEE ICNC 2025.</strong></li>
       <li><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
-      <li class="more-news" style="display:none;"><strong>07/2024, invited to be a TPC member of IEEE ICPADS 2024.</strong></li>
-      <li class="more-news" style="display:none;"><strong>05/2024, invited to be a TPC member of IEEE MSN 2024.</strong></li>
+      <li class="more-news" style="display:none;"><strong>07/2024, invited to serve as TPC of IEEE ICPADS 2024.</strong></li>
+      <li class="more-news" style="display:none;"><strong>05/2024, invited to serve as TPC of IEEE MSN 2024.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2023, joined Duke University as a Postdoctoral Associate.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2023, successfully defended my Ph.D. thesis.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2022, passed comprehensive exam.</strong></li>
