--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       <h1><a>Xiao Zhang</a></h1>
 
         <p class="w3-center">
-          <a>Office: 212 CIS Bld.</a> | <a>Lab: 108 CIS Bld.</a>
-          <a>4901 Evergreen Road, Dearborn, MI 48128</a>
+          <a>Office: CIS 212.</a> | <a>Lab: CIS 108 & ELB 2387.</a>
+          <a>4901 Evergreen Rd, Dearborn, MI 48128</a>
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
@@ -123,6 +123,7 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
+      <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all!</strong></li>
       <li><strong>07/2025, awarded IHP Research and Engagement Fund, thanks UM.</strong></li>
       <li><strong>06/2025, awarded OE Review grant, thanks OE committee.</strong></li>
       <li><strong>05/2025, awarded OE Creation grant, thanks OE committee.</strong></li>
@@ -130,8 +131,8 @@
       <li><strong>04/2025, invited to serve as NSF panelist.</strong></li>
       <li><strong>03/2025, awarded Creative Teaching fund, thanks UM-Dearborn.</strong></li>
       <li><strong>01/2025, invited to serve as TPC of IEEE INFOCOM DeepWireless 2025.</strong></li>
-      <li><strong>10/2024, invited to serve as TPC of IEEE ICNC 2025.</strong></li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-news" style="display:none;"><strong>10/2024, invited to serve as TPC of IEEE ICNC 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
       <li class="more-news" style="display:none;"><strong>07/2024, invited to serve as TPC of IEEE ICPADS 2024.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2024, invited to serve as TPC of IEEE MSN 2024.</strong></li>
@@ -576,6 +577,7 @@ The Projects Section
   <!-- The Awards Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="award">
     <h2>Awards</h2>
+    <p><li> 2025, IHP Research and Engagement Grant, UM</p>
     <p><li> 2025, OE Review Grant, UM-Dearborn</p>
     <p><li> 2025, OE Creation Grant, UM-Dearborn</p>
     <p><li> 2025, Creative Teaching Fund, UM-Dearborn</p>
@@ -586,7 +588,7 @@ The Projects Section
     <p><li> 2023/2021/2019, Graduate Office Fellowship, MSU</p>
     <p><li> 2023, Dissertation Completion Fellowship, MSU</p>
     <p><li> 2022, Graduate Travel Fellowship, MSU</p>
-    <p><li> 2019, Student Travel Grant, NSF-mmWaveRCN</p>
+    <p><li> 2019, mmWave-RCN Student Travel Grant, NSF</p>
     <p><li> 2016-2018, Postgraduate Scholarship, NPU</p>
     <p><li> 2016, Outstanding Graduate, TUT</p>
     <p><li> 2015, President Scholarship, Top 10, TUT</p>
