--- a/index.html
+++ b/index.html
@@ -576,28 +576,28 @@ The Projects Section
 
 
   <!-- The Awards Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="award">
+  <div class="w3-container w3-light-grey w3-padding-32" id="awards">
     <h2>Awards</h2>
 
    <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
-      <p><li> 2025, IHP Research and Engagement Grant, UM</p>
-      <p><li> 2025, OE Review Grant, UM-Dearborn</p>
-      <p><li> 2025, OE Creation Grant, UM-Dearborn</p>
-      <p><li> 2025, Creative Teaching Fund, UM-Dearborn</p>
-      <p><li> 2025, SURE Program, UM-Dearborn</p>
-      <p><li> 2025, NeTS ECI Travel Grant, NSF</p>
-      <p><li> 2024, Regional I-Corps Fund, NSF</p>
-      <p><li> 2024, RAG Grant, UM-Dearborn</p>
-      <p><li> 2023/2021/2019, Graduate Office Fellowship, MSU</p>
+      <li> 2025, IHP Research and Engagement Grant, UM</li>
+      <li> 2025, OE Review Grant, UM-Dearborn</li>
+      <li> 2025, OE Creation Grant, UM-Dearborn</li>
+      <li> 2025, Creative Teaching Fund, UM-Dearborn</li>
+      <li> 2025, SURE Program, UM-Dearborn</li>
+      <li> 2025, NeTS ECI Travel Grant, NSF</li>
+      <li> 2024, Regional I-Corps Fund, NSF</li>
+      <li> 2024, RAG Grant, UM-Dearborn</li>
+      <li> 2023/2021/2019, Graduate Office Fellowship, MSU</li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
-      <li class="more-awards" style="display:none;"><strong>2023, Dissertation Completion Fellowship, MSU</strong></li>
-      <li class="more-awards" style="display:none;"><strong>2022, Graduate Travel Fellowship, MSU</strong></li>
-      <li class="more-awards" style="display:none;"><strong>2019, mmWave-RCN Student Travel Grant, NSF</strong></li>
-      <li class="more-awards" style="display:none;"><strong>2016-2018, Postgraduate Scholarship, NPU</strong></li>
-      <li class="more-awards" style="display:none;"><strong>2016, Outstanding Graduate, TUT</strong></li>
-      <li class="more-awards" style="display:none;"><strong>2015, President Scholarship, Top 10, TUT</strong></li>
-      <li class="more-awards" style="display:none;"><strong>2013/2014, National Encouragement Scholarship, China</strong></li>
+      <li class="more-awards" style="display:none;">2023, Dissertation Completion Fellowship, MSU</li>
+      <li class="more-awards" style="display:none;">2022, Graduate Travel Fellowship, MSU</li>
+      <li class="more-awards" style="display:none;">2019, mmWave-RCN Student Travel Grant, NSF</li>
+      <li class="more-awards" style="display:none;">2016-2018, Postgraduate Scholarship, NPU</li>
+      <li class="more-awards" style="display:none;">2016, Outstanding Graduate, TUT</li>
+      <li class="more-awards" style="display:none;">2015, President Scholarship, Top 10, TUT</li>
+      <li class="more-awards" style="display:none;">2013/2014, National Encouragement Scholarship, China</li>
       
    </ul>
       <button id="toggle-btn" class="w3-button w3-margin-top" style="background: transparent; border: none; color: #447ec9; cursor: pointer;">
