--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h1><a>Xiao Zhang</a></h1>
 
         <p class="w3-center">
-          <a>Office: CIS 212.</a> | <a>Lab: CIS 108 & ELB 2387.</a>
+          <a>Office: CIS 212</a> | <a>Lab: CIS 108 & ELB 2387</a>
           <a>4901 Evergreen Rd, Dearborn, MI 48128</a>
         </p>
 
@@ -578,8 +578,7 @@ The Projects Section
   <!-- The Awards Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="awards">
     <h2>Awards</h2>
-
-   <ul id="awards-list">
+    <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
       <li> 2025, IHP Research and Engagement Grant, UM</li>
       <li> 2025, OE Review Grant, UM-Dearborn</li>
@@ -599,15 +598,15 @@ The Projects Section
       <li class="more-awards" style="display:none;">2015, President Scholarship, Top 10, TUT</li>
       <li class="more-awards" style="display:none;">2013/2014, National Encouragement Scholarship, China</li>
       
-   </ul>
-      <button id="toggle-btn" class="w3-button w3-margin-top" style="background: transparent; border: none; color: #447ec9; cursor: pointer;">
+    </ul>
+      <button id="toggle-btnn" class="w3-button w3-margin-top" style="background: transparent; border: none; color: #447ec9; cursor: pointer;">
         More
       </button>
   </div> 
 
   <script>
   document.addEventListener("DOMContentLoaded", function () {
-    const btn = document.getElementById("toggle-btn");
+    const btn = document.getElementById("toggle-btnn");
     let expanded = false;
     btn.addEventListener("click", function () {
       const moreItems = document.querySelectorAll(".more-awards");
