--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
       <h1><a>Xiao Zhang</a></h1>
 
         <p class="w3-center">
-          <a>Office: CIS 212</a>&emsp | &emsp<a>Lab: CIS 108 & ELB 2387</a>
+          <a>Office: CIS 212</a>&nbsp | &nbsp<a>Lab: CIS 108 & ELB 2387</a>
           <a>4901 Evergreen Rd, Dearborn, MI 48128</a>
         </p>
 
