--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
 
         <p class="w3-center">
           <a>Office: CIS 212</a>&nbsp | &nbsp<a>Lab: CIS 108 & ELB 2387</a>
-          <a>4901 Evergreen Rd, Dearborn, MI 48128</a>
+          &nbsp&nbsp<a>4901 Evergreen Rd, Dearborn, MI 48128</a>&nbsp&nbsp
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
