--- a/index.html
+++ b/index.html
@@ -93,8 +93,8 @@
       <h1><a>Xiao Zhang</a></h1>
 
         <p class="w3-center">
-          <a>Office: CIS 212</a>&nbsp | &nbsp<a>Lab: CIS 108 & ELB 2387</a>
-          &nbsp&nbsp<a>4901 Evergreen Rd, Dearborn, MI 48128</a>&nbsp&nbsp
+          <a>Office: CIS 212</a>&nbsp | &nbsp<a>Lab: CIS 108 & ELB 2387</a><br>
+          <a>4901 Evergreen Rd, Dearborn, MI 48128</a>
         </p>
 
         <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:600px">
