--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
-      <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all!</strong></li>
+      <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
       <li><strong>07/2025, awarded IHP Research and Engagement Fund, thanks UM.</strong></li>
       <li><strong>06/2025, awarded OE Review grant, thanks OE committee.</strong></li>
       <li><strong>05/2025, awarded OE Creation grant, thanks OE committee.</strong></li>
