--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
+      <li><strong>08/2025, the demo for ViKey is accepted at IEEE MASS 2025 as poster, congratulations all. </strong></li>
+      <li><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
       <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
       <li><strong>07/2025, awarded IHP Research and Engagement Fund, thanks UM.</strong></li>
       <li><strong>06/2025, awarded OE Review grant, thanks OE committee.</strong></li>
@@ -130,8 +132,8 @@
       <li><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
       <li><strong>04/2025, invited to serve as NSF panelist.</strong></li>
       <li><strong>03/2025, awarded Creative Teaching fund, thanks UM-Dearborn.</strong></li>
-      <li><strong>01/2025, invited to serve as TPC of IEEE INFOCOM DeepWireless 2025.</strong></li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-news" style="display:none;"><strong>01/2025, invited to serve as TPC of IEEE INFOCOM DeepWireless 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>10/2024, invited to serve as TPC of IEEE ICNC 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
       <li class="more-news" style="display:none;"><strong>07/2024, invited to serve as TPC of IEEE ICPADS 2024.</strong></li>
@@ -522,13 +524,17 @@ The Projects Section
           <p>
             <li><strong>master</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Ashwin Sarvadey
+            Ashwin Sarvadey 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Jaskirat Sudan 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Rohit Raval 
+            Mohammed Islam 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Nishaant Madhankumar
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Rohit Raval 
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Shamit Dholakiya 
             </p>
 
           <p>
@@ -552,6 +558,8 @@ The Projects Section
             Soham Naik  -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Syed Gilani （UM SURE Scholar）
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Zhalgas Tileumuratin
             </p>
 
 
