--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
-      <li><strong>08/2025, the demo for ViKey is accepted at IEEE MASS 2025 as poster, congratulations all. </strong></li>
+      <li><strong>08/2025, ViKey demo accepted at IEEE MASS 2025 as poster, congratulations. </strong></li>
       <li><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
       <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
       <li><strong>07/2025, awarded IHP Research and Engagement Fund, thanks UM.</strong></li>
@@ -646,7 +646,7 @@ The Projects Section
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
         <p><li> <strong>Program Committee</strong>  
           <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
-            <em>INFOCOM DeepWireless 2025, ICNC 2025, MSN 2024, ICPADS 2024 </em>        </p>
+            <em>INFOCOM DeepWireless 2025, ICNC 2025, MSN 2024, ICPADS 2024, ICPADS 2025 </em>        </p>
   
       <p><li> <strong>External Reviewer</strong>  
         <p class="w3-justify" style="width:90%;border:5px;border-spacing:5px;border-collapse:separate;margin-right:1em;margin-left:1em;max-width:600px">
