--- a/index.html
+++ b/index.html
@@ -242,6 +242,30 @@ The Projects Section
         </p>
 
       <p>
+        <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
+        <br>
+        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
+        <br>
+        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="data/ICNP24_HoloCube.pdf">paper</a> 
+        </p>
+
+              <p>
+        <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
+        <br>
+        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
+        <br>
+        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="data/ICNP24_HoloCube.pdf">paper</a> 
+        </p>
+
+      <p>
+        <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
+        <br>
+        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
+        <br>
+        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="data/ICNP24_HoloCube.pdf">paper</a> 
+        </p>
+
+      <p>
         <li><strong>WavePurifier: Purifying Audio Adversarial Examples via Hierarchical Diffusion Models</strong>
         <br>
         Hanqing Guo, Guangjing Wang, Bocheng Chen, Yuanda Wang, <strong>Xiao Zhang</strong>, Xun Chen, Qiben Yan, Li Xiao       
@@ -303,13 +327,6 @@ The Projects Section
         <!-- <em>MobiCom</em> 2022 | <a style="color: #447ec9" href="https://www.sigmobile.org/mobicom/2022/accepted.html">paper</a>  -->
       </p>
 
-      <!-- <p>
-        <li><strong>Handling Data Heterogeneity in Federated Learning via Knowledge Fusion</strong>
-        <br>
-        Xu Zhou, Xinyu Lei, Cong Yang, Yichun Shi, <strong>Xiao Zhang</strong>, and Jingwen Shi
-        <br>
-        <em>arXiv preprint</em> 2022 | <a style="color: #447ec9" href="data/FL_fusion.pdf">paper</a> 
-        </p> -->
 
       <p>
       <li><strong>LiFOD: Lighting Extra Data via Fine-grained OWC Dimming</strong>
@@ -459,26 +476,6 @@ The Projects Section
 
   </div> 
 
-<!-- 
-      </ol>
-
-      <h4> Journal Papers:</h4>
-
-      <ol> -->
-
-      <!-- <p>
-      <li><strong>GhostNets on Heterogeneous Devices via Cheap Operations</strong>
-      <br>
-      Kai Han, <strong>Yunhe Wang</strong>, Chang Xu, Jianyuan Guo, Chunjing Xu, Enhua Wu, Qi Tian 
-      <br>
-      <em>IJCV</em> 2022 | <a style="color: #447ec9" href="https://link.springer.com/content/pdf/10.1007/s11263-022-01575-y.pdf">paper</a> | <a style="color: #447ec9" href="https://gitee.com/mindspore/models/tree/master/research/cv/ghostnet_d">MindSpore code</a> | <a style="color: #447ec9" href="https://github.com/huawei-noah/Efficient-AI-Backbones">Pytorch code</a>
-      </p> -->
-
-
-      <!-- </ol>
-
-    </p>
-  </div> -->
 
     <!-- The Teaching Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="teaching">
@@ -526,13 +523,7 @@ The Projects Section
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Ashwin Sarvadey 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Jaskirat Sudan 
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Mohammed Islam 
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Nishaant Madhankumar
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Rohit Raval 
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Shamit Dholakiya 
             </p>
@@ -541,21 +532,10 @@ The Projects Section
             <li><strong>undergraduate</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Christian Nwobu （NSF STEM Scholar）
-
-            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Alan Raj
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Zaynab Mourtada -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Qasem （NSF STEM Scholar）
-            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Areeba Mirza
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Jason Grose -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Fatima Mohammed （NSF STEM Scholar）
-            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Soham Naik  -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Syed Gilani （UM SURE Scholar）
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
@@ -571,12 +551,18 @@ The Projects Section
             Xinmei Fu -->
             </p>
 
-            
-          <!-- <p>
-            <li><strong>high school</strong>
+
+          <p>
+            <li><strong>alumni</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Max Xiao
-            </p> -->
+            Deniz Acikbas (now Ph.D. at UM-Dearborn)
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Jaskirat Sudan 
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Nishaant Madhankumar
+            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Rohit Raval 
+            </p>
 
     </div>
   
