--- a/index.html
+++ b/index.html
@@ -123,16 +123,18 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
+      <li><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
+      <li><strong>08/2025, one paper accepted on IEEE TDSC (Transactions on Dependable and Secure Computing), congratulations.</strong></li>
       <li><strong>08/2025, ViKey demo accepted at IEEE MASS 2025 as poster, congratulations. </strong></li>
       <li><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
       <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
-      <li><strong>07/2025, awarded IHP Research and Engagement Fund, thanks UM.</strong></li>
-      <li><strong>06/2025, awarded OE Review grant, thanks OE committee.</strong></li>
-      <li><strong>05/2025, awarded OE Creation grant, thanks OE committee.</strong></li>
+      <li><strong>07/2025, received IHP Research and Engagement Fund, thanks UM.</strong></li>
+      <li><strong>06/2025, received OE Review grant, thanks OE committee.</strong></li>
+      <li><strong>05/2025, received OE Creation grant, thanks OE committee.</strong></li>
       <li><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
-      <li><strong>04/2025, invited to serve as NSF panelist.</strong></li>
-      <li><strong>03/2025, awarded Creative Teaching fund, thanks UM-Dearborn.</strong></li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-news" style="display:none;"><strong>04/2025, invited to serve as NSF panelist.</strong></li>
+      <li class="more-news" style="display:none;"><strong>03/2025, received Creative Teaching fund, thanks UM-Dearborn.</strong></li>
       <li class="more-news" style="display:none;"><strong>01/2025, invited to serve as TPC of IEEE INFOCOM DeepWireless 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>10/2024, invited to serve as TPC of IEEE ICNC 2025.</strong></li>
       <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li>
