--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <li><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
-      <li><strong>08/2025, one paper accepted on IEEE Transactions on Dependable and Secure Computing, congratulations.</strong></li>
+      <li><strong>08/2025, one paper accepted on IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
       <li><strong>08/2025, ViKey demo accepted at IEEE MASS 2025 as poster, congratulations. </strong></li>
       <li><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
       <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
