--- a/index.html
+++ b/index.html
@@ -123,6 +123,8 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
+      <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025. Congratulations.</strong></li>
+      <li><strong>08/2025, Jaskirat and Ashwin received EXP+ grants to attend IEEE MASS 2025. Congratulations.</strong></li>
       <li><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
       <li><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
       <li><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
@@ -130,10 +132,10 @@
       <li><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
       <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
       <li><strong>07/2025, received IHP Research and Engagement Fund, thanks UM.</strong></li>
-      <li><strong>06/2025, received OE Review grant, thanks OE committee.</strong></li>
-      <li><strong>05/2025, received OE Creation grant, thanks OE committee.</strong></li>
-      <li><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-news" style="display:none;"><strong>06/2025, received OE Review grant, thanks OE committee.</strong></li>
+      <li class="more-news" style="display:none;"><strong>05/2025, received OE Creation grant, thanks OE committee.</strong></li>
+      <li class="more-news" style="display:none;"><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
       <li class="more-news" style="display:none;"><strong>04/2025, invited to serve as NSF panelist.</strong></li>
       <li class="more-news" style="display:none;"><strong>03/2025, received Creative Teaching fund, thanks UM-Dearborn.</strong></li>
       <li class="more-news" style="display:none;"><strong>01/2025, invited to serve as TPC of IEEE INFOCOM DeepWireless 2025.</strong></li>
