--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
    <h2>News</h2>
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
-      <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025. Congratulations.</strong></li>
-      <li><strong>08/2025, Jaskirat and Ashwin received EXP+ grants to attend IEEE MASS 2025. Congratulations.</strong></li>
+      <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li>
+      <li><strong>08/2025, Jaskirat and Ashwin received EXP+ grants to attend IEEE MASS 2025.</strong></li>
       <li><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
       <li><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
       <li><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
