--- a/index.html
+++ b/index.html
@@ -229,38 +229,46 @@ The Projects Section
   <div class="w3-container w3-padding-32"" id="publications">
     <h2>Research</h2>
 
-    <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
+    <!-- <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
       I am interested in next-generation wireless communication and networking, particularly in the areas of optical wireless communication (OWC) and mmWave technologies. My interests also extend to underwater optical communication, localization, and navigation, as well as mobile computing. Additionally, I am intrigued by vehicle-to-everything (V2X) networks, AI-assisted novel applications, the Internet of Things (IoT), digital health, cyber-physical systems (CPS) security, and the Metaverse.      </p>
-    </p>
+    </p> -->
     
         
     <h4> Conference Papers</h4>
 
-    <ol>
+    <ol> <sup>*</sup> denotes the student I advise and <sup>^</sup> denotes the co-primary authors.
 
-      <!-- <p>
-        <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
+      <p>
+        <li><strong>Dissecting Privacy-Exposing Identifiers in 5G/4G Networks</strong>
         <br>
-        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
+        Munshi Saifuzzaman, Ke Xie, Tian Xie, <strong>Xiao Zhang</strong>, and Xinyu Lei          
         <br>
-        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="data/ICNP24_HoloCube.pdf">paper</a> 
+        <em>DSC</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
         </p>
 
       <p>
-        <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
+        <li><strong>ViKey: Secure Door Access Control Using Passive Visible Light Tags</strong>
         <br>
-        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
+        Jaskirat Sudan*^,  Fatima Qasem*^, Hasky E Fynn*^, Fatima Mohammed*, Ashwin Sarvadey*, Tian Xie, Ang Li, and <strong>Xiao Zhang</strong>         
         <br>
-        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="data/ICNP24_HoloCube.pdf">paper</a> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
         </p>
 
-              <p>
-        <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
+      <p>
+        <li><strong>PlaCoB: Collaborative Beamforming for Long Range Platoon-to-Platoon Communication</strong>
         <br>
-        <strong>Xiao Zhang</strong>, Li Xiao, and Matt W. Mutka        
+        Griffin Klevering, Kanishka P Wijewardena, <strong>Xiao Zhang</strong>, and Li Xiao        
         <br>
-        <em>ICNP</em> 2024 | <a style="color: #447ec9" href="data/ICNP24_HoloCube.pdf">paper</a> 
-        </p> -->
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        </p>
+
+      <p>
+        <li><strong>VIOSem: Visual-Inertial Odometry via Semantic Communication-enhanced Modulation Design</strong>
+        <br>
+        Kanishka P Wijewardena, Griffin Klevering, <strong>Xiao Zhang</strong>, and Li Xiao    
+        <br>
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        </p>
 
       <p>
         <li><strong>HoloCube: 3D Opitcal IoT Connections via Software Defined Pepper's Ghost</strong>
@@ -380,6 +388,15 @@ The Projects Section
 
     <h4> Journal Papers</h4>
     <ol>
+
+      <p>
+        <li><strong>Uncovering Risks of Data-Free Feature Vector Inversion Attacks Against Vector Databases</strong>
+        <br>
+        Shengyang Qin, Xinyu Lei, Nankun Mu, Hongyu Huang, Tian Xie, and <strong>Xiao Zhang</strong> 
+        <br>
+        <em>IEEE Transactions on Dependable and Secure Computing</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+      </p>
+
       <p>
         <li><strong>Exploiting Fine-grained Dimming with Improved LiFi Throughput
         </strong>
@@ -420,6 +437,16 @@ The Projects Section
 
     <h4> Workshop/Poster/Demo Papers</h4>
     <ol>
+
+
+      <p>
+        <li><strong>A Passive Optical Tagging Approach for Secure and Revocable Entry Systems
+        </strong>
+        <br>
+        Hasky E Fynn, Jaskirat Sudan,Fatima Qasem, Fatima Mohammed, and <strong>Xiao Zhang</strong>   
+        <br>
+        <em>MASS Demo</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+      </p>
 
       <p>
         <li><strong>Holographic Optical Tag enabled Omindirectional IoT Connection
