--- a/index.html
+++ b/index.html
@@ -554,8 +554,8 @@ The Projects Section
             <li><strong>master</strong>
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Ashwin Sarvadey 
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
-            Mohammed Islam 
+            <!-- <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            Mohammed Islam  -->
             <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
             Shamit Dholakiya 
             </p>
