--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@ The Projects Section
     <!-- <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
       I am interested in next-generation wireless communication and networking, particularly in the areas of optical wireless communication (OWC) and mmWave technologies. My interests also extend to underwater optical communication, localization, and navigation, as well as mobile computing. Additionally, I am intrigued by vehicle-to-everything (V2X) networks, AI-assisted novel applications, the Internet of Things (IoT), digital health, cyber-physical systems (CPS) security, and the Metaverse.      </p>
     </p> -->
-    <ol> <sup>*</sup> denotes the student under supervision at the time of submission and <sup>^</sup> denotes the co-primary authors.
+    <!-- <ol> <sup>*</sup> denotes the student under supervision at the time of submission and <sup>^</sup> denotes the co-primary authors. -->
         
     <h4> Conference Papers</h4>
     <ol>
