--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
     <!-- <p class="w3-justify" style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;max-width:800px">
       I am interested in next-generation wireless communication and networking, particularly in the areas of optical wireless communication (OWC) and mmWave technologies. My interests also extend to underwater optical communication, localization, and navigation, as well as mobile computing. Additionally, I am intrigued by vehicle-to-everything (V2X) networks, AI-assisted novel applications, the Internet of Things (IoT), digital health, cyber-physical systems (CPS) security, and the Metaverse.      </p>
     </p> -->
-    <!-- <ol> <sup>*</sup> denotes the student under supervision at the time of submission and <sup>^</sup> denotes the co-primary authors. -->
+    <sup>*</sup> denotes the student under supervision at the time of submission and <sup>^</sup> denotes the co-primary authors.
         
     <h4> Conference Papers</h4>
     
@@ -456,7 +456,7 @@
     <!-- The Teaching Section -->
   <div class="w3-container w3-light-grey w3-padding-32" id="teaching">
     <h2>Teaching</h2>
-    <ol>
+    <ul>
 
       <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
       <!-- <p><li> Leturer <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<em>MSN 2024</em> -->
@@ -487,6 +487,8 @@
     <!-- The Students Section -->
     <div class="w3-container w3-padding-32" id="students">
       <h2>Students</h2>
+
+      <ul>
         <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
           <p>
             <li><strong>Ph.D.</strong>
