--- a/index.html
+++ b/index.html
@@ -491,8 +491,7 @@
       <ul>
         <!-- <p><li> Reviewer of <a href="https://icml.cc/Conferences/2021">ICML 2021</a>, <a href="https://nips.cc/Conferences/2021/">NeurIPS 2021</a>.</p> -->
           <p>
-            <li><strong>Ph.D.</strong>
-            <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+            <li><strong>Ph.D.</strong><br> 
             Deniz Acikbas
             <!-- <br> -->
            
