--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
  
 
         <p class="w3-center">
-          <a href="mailto:zhanxiao@umich.edu">Umich Email</a> /
+          <a href="mailto:zhanxiao@umich.edu">Email</a> /
           <a href="https://scholar.google.com/citations?user=TIFjEXIAAAAJ&hl=en&oi=ao">Google Scholar</a> /
           <a href="https://experts.umich.edu/13121-xiao-zhang">Michigan Experts</a>
         </p>
