--- a/index.html
+++ b/index.html
@@ -96,15 +96,18 @@
    <ul id="news-list">
     <!-- <li><strong></strong></li> -->
       <!-- <li><strong>08/2025, Ashwin received student travel grant to attend IEEE MASS 2025.</strong></li> -->
+      <li><strong>10/2025, invited to give a research talk at ASME Detroit Section about next-generation wireless networks.</strong></li>
+      <li><strong>10/2025, our paper PlaCoB received the Best Paper Award in IEEE MASS 2025, congratulations.</strong></li>
+      <li><strong>10/2025, invited to give guest lecture at MSU about optical wireless communication and sensing.</strong></li>
       <li><strong>08/2025, Jaskirat and Ashwin received EXP+ and STG grants to attend IEEE MASS 2025.</strong></li>
       <li><strong>08/2025, one paper accepted at IEEE DSC 2025, congratulations.</strong></li>
       <li><strong>08/2025, received NAIRR Pilot award to support our visible light positioning for smart manufacturing.</strong></li>
       <li><strong>08/2025, one paper accepted at IEEE Trans. on Dependable and Secure Computing, congratulations.</strong></li>
       <li><strong>08/2025, ViKey demo accepted at IEEE MASS 2025 as poster, congratulations. </strong></li>
-      <li><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
-      <li><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
-      <li><strong>07/2025, received IHP Research and Engagement Fund, thanks UM.</strong></li>
       <!-- <li class="more-news" style="display:none;"><strong>09/2024, joined UM-Dearborn as a tenure-track Assistant Professor.</strong></li> -->
+      <li class="more-news" style="display:none;"><strong>08/2025, invited to serve as TPC of IEEE ICPADS 2025.</strong></li>
+      <li class="more-news" style="display:none;"><strong>07/2025, three papers (ViKey, PlaCoB, and VIOSem) accepted at IEEE MASS 2025, congratulations all.</strong></li>
+      <li class="more-news" style="display:none;"><strong>07/2025, received IHP Research and Engagement Fund, thanks UM.</strong></li>
       <li class="more-news" style="display:none;"><strong>06/2025, received OE Review grant, thanks OE committee.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2025, received OE Creation grant, thanks OE committee.</strong></li>
       <li class="more-news" style="display:none;"><strong>05/2025, partnered with Universal Academy Learning on K-12 STEM outreach.</strong></li>
@@ -149,7 +152,7 @@
   <div class="w3-container w3-padding-32" id="publications">
     <h2>Research</h2>
  
-    <sup>*</sup> denotes the student under supervision at the time of submission and <sup>^</sup> denotes the co-primary authors.
+    <sup>*</sup> denotes the student under supervision/mentoring and <sup>^</sup> denotes the co-primary authors.
         
     <h4> Conference Papers</h4>
     
@@ -168,21 +171,21 @@
         <br>
         Jaskirat Sudan*^,  Fatima Qasem*^, Hasky E Fynn*^, Fatima Mohammed*, Ashwin Sarvadey*, Tian Xie, Ang Li, and <strong>Xiao Zhang</strong>         
         <br>
-        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> <a style="color: #447ec9" href="https://youtu.be/VeroL6rs1k0?si=kqbgS8GRsyIb9BpZ">teaser</a> 
         </p>
 
       <p>
         <li><strong>PlaCoB: Collaborative Beamforming for Long Range Platoon-to-Platoon Communication</strong>
         <br>
-        Griffin Klevering, Kanishka P Wijewardena, <strong>Xiao Zhang</strong>, and Li Xiao        
+        Griffin Klevering*, Kanishka P Wijewardena*, <strong>Xiao Zhang</strong>, and Li Xiao        
         <br>
-        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
+        <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a>  <em style="color: #c22020">Best Paper Award</em> 
         </p>
 
       <p>
         <li><strong>VIOSem: Visual-Inertial Odometry via Semantic Communication-enhanced Modulation Design</strong>
         <br>
-        Kanishka P Wijewardena, Griffin Klevering, <strong>Xiao Zhang</strong>, and Li Xiao    
+        Kanishka P Wijewardena*, Griffin Klevering*, <strong>Xiao Zhang</strong>, and Li Xiao    
         <br>
         <em>MASS</em> 2025 | <a style="color: #447ec9" href=" ">paper</a> 
         </p>
@@ -215,7 +218,7 @@
       <p>
         <li><strong>RoFin: 3D Hand Pose Reconstructing via 2D Rolling Fingertips</strong>
         <br>
-        <strong>Xiao Zhang</strong>, Griffin Klevering, Juexing Wang, Li Xiao, and Tianxing Li        
+        <strong>Xiao Zhang</strong>, Griffin Klevering*, Juexing Wang, Li Xiao, and Tianxing Li        
         <br>
         <em>MobiSys</em> 2023 | <a style="color: #447ec9" href="data/RoFin_MobiSys.pdf">paper</a> 
         </p>
@@ -234,7 +237,7 @@
       <p>
         <li><strong>Boosting Optical Camera Communication via 2D Rolling Blocks</strong>
         <br>
-        <strong>Xiao Zhang</strong>, Griffin Klevering, James Mariani, Li Xiao, and Matt Mutka
+        <strong>Xiao Zhang</strong>, Griffin Klevering*, James Mariani, Li Xiao, and Matt Mutka
         <br>
         <em>IWQoS</em> 2023 | <a style="color: #447ec9" href="data/RainbowRow_IWQoS.pdf">paper</a> 
         </p>
@@ -242,7 +245,7 @@
         <p>
           <li><strong>PoseFly: On-site Pose Parsing of Swarming Drones via 4-in-1 Optical Camera Communication</strong>
           <br>
-          <strong>Xiao Zhang</strong>, Griffin Klevering, and Li Xiao
+          <strong>Xiao Zhang</strong>, Griffin Klevering*, and Li Xiao
           <br>
           <em>WoWMoM</em> 2023 | <a style="color: #447ec9" href="data/PoseFly_WoWMoM.pdf">paper</a> 
           </p>
@@ -324,7 +327,7 @@
         <li><strong>The Security in Optical Wireless Communication: A Survey
         </strong>
         <br>
-        <strong>Xiao Zhang</strong>, Griffin Klevering, Xinyu Lei, Yiwen Hu, Li Xiao, and Guan-Hua Tu
+        <strong>Xiao Zhang</strong>, Griffin Klevering*, Xinyu Lei, Yiwen Hu, Li Xiao, and Guan-Hua Tu
         <br>
         <em>ACM Computing Surveys</em> 2023 | <a style="color: #447ec9" href="data/OWC security.pdf">paper</a> 
       </p>
@@ -374,7 +377,7 @@
         <li><strong>Integrated On-site Localization and Optical Camera Communication for Drones
         </strong>
         <br>
-        <strong>Xiao Zhang</strong>, Griffin Klevering, Kanishka Wijewardena, and Li Xiao
+        <strong>Xiao Zhang</strong>, Griffin Klevering*, Kanishka Wijewardena*, and Li Xiao
         <br>
         <em>WoWMoM Demo</em> 2023 | <a style="color: #447ec9" href="data/PoseFly_Demo.pdf">paper</a> 
       </p>
@@ -384,7 +387,7 @@
           Tracking with Objective Identification
         </strong>
         <br>
-        <strong>Xiao Zhang</strong>, Griffin Klevering, Li Xiao
+        <strong>Xiao Zhang</strong>, Griffin Klevering*, Li Xiao
         <br>
         <em>SenSys Poster</em> 2022 | <a style="color: #447ec9" href="data/sensys22posterdemo-final26.pdf">paper</a> 
       </p>
@@ -509,10 +512,11 @@
 
 
   <!-- The Awards Section -->
-  <div class="w3-container w3-light-grey w3-padding-32" id="awards">
+  <div class="w3-container w3-light-grey w3-padding-32" id="award">
     <h2>Awards</h2>
     <ul id="awards-list">
       <!-- <li><strong></strong></li> -->
+      <li> 2025, Best Paper Award, IEEE MASS</li>
       <li> 2025, IHP Research and Engagement Grant, UM</li>
       <li> 2025, OE Review Grant, UM-Dearborn</li>
       <li> 2025, OE Creation Grant, UM-Dearborn</li>
